Address java 1.8 build failure