@@ -8,7 +8,7 @@ package com.ibm.cohort.engine;
 import static org.junit.Assert.assertNotNull;
 
 import java.io.InputStream;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import org.hl7.elm.r1.VersionedIdentifier;
 import org.junit.Test;
@@ -16,7 +16,7 @@ import org.junit.Test;
 public class DirectoryLibrarySourceProviderTest {
 	@Test
 	public void testLibraryFoundInDirectorySuccess() throws Exception {
-		DirectoryLibrarySourceProvider provider = new DirectoryLibrarySourceProvider(Path.of("src/test/resources/cql/basic"));
+		DirectoryLibrarySourceProvider provider = new DirectoryLibrarySourceProvider(Paths.get("src/test/resources/cql/basic"));
 		try( InputStream is = provider.getLibrarySource( new VersionedIdentifier().withId("test") ) ) {
 			assertNotNull( is );
 		}
